# LAI

./: .gitignore  .pre-commit-config.yaml  LAI Phase2 MOE Architecture Wokflow.md  LAI-UI-FRONTEND-ANALYSIS.md  LAI_EXECUTIVE_SUMMARY.md  LAI_PRODUCTION_ANALYSIS_REPORT.md  LAI_Phase1_Architecture_Workflow.md  LAI_TRAINING_ARCHITECTURE.md
LAI/: .coverage  .dockerignore  .env.example  .env.example.auth  .gitignore  CONTRIBUTING.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  setup.ps1
LAI/demo-seed/lamstedt/: README.md
LAI/docs/: DEMO_STATUS.md  DEVELOPMENT.md  HOW_IT_WORKS.md  INFRASTRUCTURE.md  LAI_V1_STRATEGY.md  MVP_DELIVERY.md  PILOT_FINAL_TEST_PLAN.md  PIPELINE_PROGRESS_REPORT.md  PROJECT_STATUS.md  PUSH_ACCESS_SETUP.md  SECURITY.md  STRESS_TEST_PLAN.md  STRESS_VOLUME_PLAN.md  TEAM_ACCESS.md  TECHNICAL_DOCUMENTATION.md  TESTING_AND_BENCHMARKS.md  UI_GUIDE.md  UPLOAD_RESUMABLE_DESIGN.md  WORKFLOW.md  statute_feed.md
LAI/docs/adr/: 0000-record-architecture-decisions.md  0001-llm-client-async-primary.md  0002-guided-json-schema-enforcement.md  0003-think-trace-server-side-stripping.md  0004-response-format-supersedes-guided-json.md  README.md
LAI/docs/analysis/: CONTRACT_ANALYZER_V2.md  LAIV5_IMPROVEMENTS.md  LAI_PROJECT_ANALYSIS.md  LAI_PROJECT_RESTRUCTURE.md
LAI/docs/architecture/: overview.md
LAI/docs/team_access/: README.md
LAI/eval/contracts/: README.md
LAI/eval_questions/: README.md  bimschg_50.jsonl
LAI/infra/monitoring/: docker-compose.yml  prometheus.yml
LAI/micro-services/: .env.example  Dockerfile  _guardrail.py  _reconcile.py  api.py  auth_dep.py  bundesland_bbox.py  cadastral_pipeline.py  ddiq_report.py  docker-compose.yml  eval_api.py  requirements.txt  worker.py
LAI/micro-services/ddiq/: __init__.py  db.py  docx_export.py  llm.py  models.py  rag.py  vlm_ocr.py
LAI/micro-services/ddiq/extractors/: __init__.py  consistency.py  findings.py  grundbuch.py  rueckbau.py  timeline.py
LAI/ops/: README.md  resume_step6.sh
LAI/scripts/: audit_results.json  audit_training_data.py  backfill_chunk_ids.py  backfill_session_messages.py  corpus_audit_results.json  dedup_phase1_rechunks.py  eval_analyzer.py  export_to_sqlite.py  multi_model_compare.py  pilot_mlp_ab.py  pilot_mlp_ab_results.json  rag_audit_analysis.py  rag_eval.py  rag_generate_test.py  rag_smoke_results.json  rag_smoke_test.py  restore_db_from_files.py  resume_step5.sh  serve_rag.py  smoke_test_analyzer.py  start.sh  status.sh  stop.sh  test_extraction.py  vllm_compare.py
LAI/scripts/archive/: audit_corpus_quality.py  backfill_chunk_ids.py  multi_model_compare.py  pilot_mlp_ab.py
LAI/scripts/archive/temp/: audit_schema.py  inspect_hf_cases.py  process_court_decisions.py  process_gerdalir.py  process_multilegalpile.py
LAI/scripts/db/: backup_db_to_files.py
LAI/scripts/db/migrations/: 001_auth_and_tenant_isolation.down.sql  001_auth_and_tenant_isolation.up.sql  001_corpus_pgvector.sql  002_org_tenancy.down.sql  002_org_tenancy.up.sql  003_super_admin_role.down.sql  003_super_admin_role.up.sql  004_org_invitations.down.sql  004_org_invitations.up.sql  005_resource_shares.down.sql  005_resource_shares.up.sql  006_audit_log.down.sql  006_audit_log.up.sql  007_statute_feed_state.down.sql  007_statute_feed_state.up.sql
LAI/scripts/eval/: baseline_to_csv.py  bm25_variant_sweep.py  eval_analyzer.py  filter_val_german.py  full_answer_demo.py  generate_eval_answers.py  golden_retrieval_sanity.py  hnsw_ef_search_sweep.py  inspect_misses.py  query_rewrite_sweep.py  rag_audit_analysis.py  rag_generate_test.py  rag_smoke_test.py  rerank_expansion_sweep.py  retrieval_recall.py  smoke_test_analyzer.py  verify_vlm_ocr_parallel.py  vllm_compare.py
LAI/scripts/ingest/: README.md  fetch_gesetze.py
LAI/scripts/ops/: README.md  audit_export.py  backup_postgres.sh  bootstrap_team_member_github_push.sh  delete_matter_document.py  email_deliverability_test.py  load_demo_matter.py  migrate_corpus.py  restart-serve_rag.sh  restart_serve_rag.sh  resume_migration.sh  resume_step5.sh  resume_step6.sh  smoke_test.py  start-host.sh  start.sh  status-host.sh  status.sh  statute_feed.sh  stop-host.sh  stop.sh  team_access_bootstrap.sh
LAI/scripts/ops/systemd/: install.sh  serve_rag.service
LAI/scripts/rag_eval_results/: bm25_n100.json  contexts.json  dense_n100.json  dense_prefix_n100.json  hybrid_n100.json  hybrid_prefix_n100.json  hybrid_rerank_n100.json  hybrid_rerank_n500.json  multi_model_compare.md  rag_generate_results.json  smoke_v2_UW-Nutzungsvertrag_Windpark_Altmark.json  vllm_compare.md
LAI/scripts/stress/: bundle_tier_for_delivery.py  stage_volume_matters.py
LAI/scripts/temp/: README.md  hf_cases_schema_audit.json  inspect_hf_cases.py  openlegaldata_schema_audit.json  process_court_decisions.py  process_gerdalir.py  process_multilegalpile.py
LAI/src/lai/: README.md  __init__.py  persistence.py
LAI/src/lai/analyzer/: README.md  __init__.py  cadastral_ner.py  llm_client.py  pipeline.py  playbooks.py  prompts.py  reconciler.py  schema.py
LAI/src/lai/api/: README.md  __init__.py  admin_router.py  auth_router.py  email.py  main.py  metrics.py  pipeline.py  serve_rag.py  share_router.py  upload_tus.py
LAI/src/lai/auth/: README.md  __init__.py  jwt.py  repository.py  routes.py
LAI/src/lai/common/: __init__.py  audit.py  exceptions.py
LAI/src/lai/core/: README.md  __init__.py  config.py  constants.py  exceptions.py  logging.py  models.py  utils.py
LAI/src/lai/documents/: README.md  __init__.py  chunker.py  embedder.py  parser.py  repository.py  routes.py
LAI/src/lai/extraction/: README.md  __init__.py  location.py  models.py  repository.py  routes.py
LAI/src/lai/generation/: README.md  __init__.py  citation_verifier.py  crag.py  llm_client.py  prompt_builder.py
LAI/src/lai/infra/: README.md  __init__.py  database.py  (+2 more)
LAI/tests/fixtures/: golden_de.json
LAI/tests/unit/: test_persistence_feedback.py  test_persistence_matter.py  test_persistence_user_scope.py
LAI/web_ui/LAI/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+277 files in other folders)
