[project]
name = "lai"
version = "5.0.0"
description = "German Legal AI Platform for Wind Energy Due Diligence"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.18",
    # Database
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.11",
    # Cache & queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # HTTP client
    "httpx>=0.28.0",
    # Document processing
    "docling>=2.0.0",
    "python-docx>=1.1.0",
    # Object storage
    "miniopy-async>=1.21.0",
    "minio>=7.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Monitoring
    "prometheus-client>=0.21.0",
    # Retry logic
    "tenacity>=9.0.0",
    # Utilities
    "numpy>=1.26.0",
    "vllm>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
training = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.1.0",
    "accelerate>=1.1.0",
    "mlflow>=2.19.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lai"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require running services)",
    "e2e: End-to-end tests (require full stack)",
    "slow: Slow tests (>10s)",
]
